--- a/styles/style.css
+++ b/styles/style.css
@@ -30,16 +30,21 @@ header::after {
     float: left;
 }
 
+#welcome{
+  background: #d0efff;
+}
+
 .right {
     float: right;
 }
 
 h1{
-  margin: 5px 0;
   float: left;
   padding: 0;
   margin: 0;
   padding:25px;
+  background: #d0efff;
+  font-style: italic;
 }
 
 .clear {
@@ -150,7 +155,7 @@ nav a {
   transition:0.5s;
 }
 
-input[type = Number]:focus{
+#yoloForm input[type = Number]:focus{
   width: 25%;
   height: 30px;
   font-size: 15px;
@@ -158,7 +163,7 @@ input[type = Number]:focus{
   border-radius: 5px;
 }
 
-#yoloForm input[type = submit]{
+#yoloForm input[type = submit],#fractalGenerator button{
   width: 50%;
   margin:15px;
   height: 30px;
@@ -168,7 +173,7 @@ input[type = Number]:focus{
   border-color: #588bae;
 }
 
-#yoloForm input[type = submit]:hover{
+#yoloForm input[type = submit]:hover,#fractalGenerator button:hover{
   width: 55%;
   height: 35px;
   font-size: 17px;
@@ -179,4 +184,21 @@ input[type = Number]:focus{
 
 #fractal {
   padding: 10px;
+}
+
+#yoloForm input[type = Number]:focus{
+  width: 25%;
+  height: 30px;
+  font-size: 15px;
+  border-color: red;
+  border-radius: 5px;
+}
+
+#fractalGenerator input[type = Number]{
+  width: 10%;
+  margin:15px;
+  height: 30px;
+  font-size: 15px;
+  transition:0.5s;
+  border-color: #588bae;
 }
