--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: #d0efff;
   font-family: "Sans-Serif",Tahoma, sans-serif;
+  height: 100%;
 }
 
 header {
@@ -201,4 +202,32 @@ nav a {
   font-size: 15px;
   transition:0.5s;
   border-color: #588bae;
+}
+
+.centreContainer{
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin:10px;
+  background:#ADD8E6;
+}
+
+#login{
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height:50%;
+  width:25%;
+  background: #cccccc;
+}
+
+#login form{
+  text-align: center;
+  margin: auto;
+  padding:10%;
+  height:90%;
+  width:90%;
+  background:white;
 }
