trying to fix login

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,18 +218,16 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height:50%;
-  width:30%;
+  height:auto;
+  width:auto;
   background: #cccccc;
 }
 
 #login form{
-  margin: auto;
-  padding-left:10%;
-  padding-right:10%;
-  padding-top:5%;
-  height:90%;
-  width:90%;
+  margin: 10%;
+  padding:10%;
+  height:auto;
+  width:auto;
   background:white;
 
 }
