--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ nav ul li {
   display: inline-block;
   font-size: 15px;
   margin: 10px;
-  padding:20px;
+  padding:25px;
   position: relative;
   border: 2px;
   transition: background 0.5s;
@@ -218,16 +218,18 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height:auto;
-  width:auto;
+  height:500px;
+  width:700px;
   background: #cccccc;
 }
 
 #login form{
-  margin: 10%;
-  padding:10%;
-  height:auto;
-  width:auto;
+  margin: auto;
+  padding-left:10%;
+  padding-right:10%;
+  padding-top:5%;
+  height:90%;
+  width:90%;
   background:white;
 
 }
