--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  margin: 10px auto;
+  margin: 0 auto;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
@@ -157,7 +157,7 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 0px;
+  margin-bottom: 140px;
   overflow: hidden;
   background-color: #ffba33;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -184,7 +184,7 @@ nav li a:hover {
 #messagesList {
   width: 70%;
   float:right;
-  height:75%;
+  height:85%;
   border-style: solid;
   border-color: grey;
   margin:2%;
@@ -193,7 +193,7 @@ nav li a:hover {
 #selectContact{
   width: 22%;
   float:left;
-  height:75%;
+  height:90%;
   background:yellow;
   margin:2%;
 }
