--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 10px auto;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
@@ -157,7 +157,7 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 140px;
+  margin-bottom: 10px;
   overflow: hidden;
   background-color: #ffba33;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
