--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -6,6 +6,12 @@ body {
   background-image: url('https://pyxis.nymag.com/v1/imgs/e06/4aa/f4afcaeedf9340ddf37323bb12aadc7f11-01-ya-like-jazz.rsquare.w330.jpg');
 }
 
+#homelabel{
+  display: block; /* add this */
+  padding: 5px;
+  text-align: center;;
+}
+
 .formvalidator {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
