--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -1,224 +1,245 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  background-image: url('https://pyxis.nymag.com/v1/imgs/e06/4aa/f4afcaeedf9340ddf37323bb12aadc7f11-01-ya-like-jazz.rsquare.w330.jpg');
+    background-image: url('https://pyxis.nymag.com/v1/imgs/e06/4aa/f4afcaeedf9340ddf37323bb12aadc7f11-01-ya-like-jazz.rsquare.w330.jpg');
 }
 
-#homelabel{
-  display: block; /* add this */
-  padding: 5px;
-  text-align: center;;
+#homelabel {
+    display: block;
+    /* add this */
+    padding: 5px;
+    text-align: center;
+    ;
 }
 
 .formvalidator {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #f9fafb;
-  padding-top: 0px;
-  min-height: 50vh;
-  margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #f9fafb;
+    padding-top: 0px;
+    min-height: 50vh;
+    margin: 0 auto;
 }
 
 .container {
-  margin: 10px auto;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  width: 400px;
-  overflow:auto;
+    margin: 10px auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    width: 400px;
+    overflow: auto;
 }
 
 #messages {
-  width: 700px !important;
-  height: 850px !important;
+    width: 700px !important;
+    height: 850px !important;
 }
 
-
-#messageBox{
-  width:auto;
-  float:right;
-  width: 70%;
-  margin-right:2%;
+#messageBox {
+    width: auto;
+    float: right;
+    width: 70%;
+    margin-right: 2%;
 }
 
-#messageBox input[type='text']{
-  width:80%;
+#messageBox input[type='text'] {
+    width: 80%;
 }
 
 #message {
-  margin-left:10px;
-  margin-right: 10px;
-  clear:both;
-  width:50%;
-  margin-top: 2px;;
-  margin-bottom: 2px;
-  border-radius: 10px;
-  padding: 3px;
+    margin-left: 10px;
+    margin-right: 10px;
+    clear: both;
+    width: 50%;
+    margin-top: 2px;
+    ;
+    margin-bottom: 2px;
+    border-radius: 10px;
+    padding: 3px;
 }
 
 p.right {
-  /* text-align: right; */
-  float:right;
-  background-color: #ffb101;
+    /* text-align: right; */
+    float: right;
+    background-color: #ffb101;
 }
 
 p.left {
-  /* text-align: left; */
-  float: left;
-  background-color: black;
-  color: white;
+    /* text-align: left; */
+    float: left;
+    background-color: black;
+    color: white;
 }
 
 .register {
-  text-align: center;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
-  margin: 0 0 20px;
-  color: #ffba33;
+    text-align: center;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+        1px 1px 0 #000;
+    margin: 0 0 20px;
+    color: #ffba33;
 }
 
 .form {
-  padding: 30px 40px;
+    padding: 30px 40px;
 }
 
 .form-control {
-  margin-bottom: 10px;
-  padding-bottom: 20px;
-  position: relative;
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
 }
 
 .form-control label {
-  color: #777;
-  display: block;
-  margin-bottom: 5px;
+    color: #777;
+    display: block;
+    margin-bottom: 5px;
 }
 
 .form-control input {
-  border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  width: 100%;
-  padding: 10px;
-  font-size: 14px;
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
 }
 
 .form-control input:focus {
-  outline: 0;
+    outline: 0;
 }
 
 .form-control.success input {
-  border-color: #2ecc71;
+    border-color: #2ecc71;
 }
 
 .form-control.error input {
-  border-color: #e74c3c;
+    border-color: #e74c3c;
 }
 
 .form-control small {
-  color: #e74c3c;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  visibility: hidden;
+    color: #e74c3c;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
 }
 
 .form-control.error small {
-  visibility: visible;
+    visibility: visible;
 }
 
 .form button {
-  cursor: pointer;
-  background-color: #ffba33;
-  border: 2px solid #ffba33;
-  border-radius: 4px;
-  font-size: 15px;
-  color: black;
-  font-weight: bolder;
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin-top: 20px;
-  width: 100%;
-  transition:.3s;
+    cursor: pointer;
+    background-color: #ffba33;
+    border: 2px solid #ffba33;
+    border-radius: 4px;
+    font-size: 15px;
+    color: black;
+    font-weight: bolder;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    width: 100%;
+    transition: .3s;
 }
 
-.hover:hover{
-  font-size: 20px;
+.hover:hover {
+    font-size: 20px;
 }
+
 footer {
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 
-a {
-  font-weight: bolder;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
-  color: yellow;
+a:not(.beemoviescript) {
+    font-weight: bolder;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+        1px 1px 0 #000;
+    color: #ffba33;
+}
+
+a.beemoviescript {
+    color: black;
+    text-decoration: none;
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 10px;
-  overflow: hidden;
-  background-color: #ffba33;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
+    overflow: hidden;
+    background-color: #ffba33;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav li {
-  float: left;
+    float: left;
 }
 
 nav li a {
-  display: block;
-  color: #ffba33;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+    display: block;
+    color: #ffba33;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 nav li a:hover {
-  background-color: #f5a142;
+    background-color: #f5a142;
 }
+
 #mainMessenger {
-  width:100%;
+    width: 100%;
 }
+
 #messagesList {
-  width: 70%;
-  float:right;
-  height:70%;
-  border-style: solid;
-  border-color: grey;
-  margin:2%;
-  overflow-y: scroll;
-  background-color: #eeeeee;
-}
-#selectContact{
-  width: 22%;
-  float:left;
-  height:75%;
-  margin-left:3%;
+    width: 70%;
+    float: right;
+    height: 70%;
+    border-style: solid;
+    border-color: grey;
+    margin: 2%;
+    overflow-y: scroll;
+    background-color: #eeeeee;
 }
 
-#newConvo{
-  font-size: 25px;
-  font-weight: bold;
-  margin:5px;
-  padding-top: 25px;
-  padding-bottom: 10px;
-  background-color: #ffba33;
-  border-radius: 25px;
-  padding-left: 30px !important;
+#selectContact {
+    width: 22%;
+    float: left;
+    height: 75%;
+    margin-left: 3%;
 }
 
-#name{
-  display: inline-block;
-  padding:10px;
-  margin:5px;
-  background-color: #ffba33;
-  border-radius: 25px;
+#inputnewcontact {
+    width: 50%;
+    padding: 6px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#newConvo {
+    font-size: 17px;
+    font-weight: normal;
+    margin: 0px 30px 0px 30px;
+    padding-top: 13px;
+    padding-bottom: 0.1px;
+    background-color: #ffba33;
+    border-radius: 25px;
+    padding-left: 30px !important;
+}
+
+#name {
+    display: inline-block;
+    padding: 10px;
+    margin: 5px;
+    background-color: #ffba33;
+    border-radius: 25px;
 }
