--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -1,4 +1,8 @@
 * {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
 }
 
@@ -7,6 +11,14 @@ body {
 }
 
 #homelabel {
+    display: block;
+    /* add this */
+    padding: 5px;
+    text-align: center;
+    ;
+}
+
+#currentusers {
     display: block;
     /* add this */
     padding: 5px;
@@ -23,6 +35,13 @@ body {
     margin: 0 auto;
 }
 
+.wrapper {
+    max-width: 400px;
+    height: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
+
 .container {
     margin: 10px auto;
     background-color: #fff;
@@ -30,6 +49,37 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     width: 400px;
     overflow: auto;
+}
+
+.containerleft {
+    margin: 10px auto;
+    background-color: lightblue;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    width: 190px;
+    height: 50px;
+    overflow: auto;
+    display: inline-block;
+}
+
+span.numbers {
+    font-family: monospace;
+    font-size: 130%;
+}
+
+.containerright {
+    margin: 10px auto;
+    background-color: lightblue;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    width: 190px;
+    height: 50px;
+    overflow: auto;
+    display: inline-block;
+}
+
+.containerright #currentversion {
+    vertical-align: middle;
 }
 
 #messages {
@@ -193,6 +243,108 @@ nav li a:hover {
     background-color: #f5a142;
 }
 
+/* ---- */
+img.logo {
+    line-height: 50px;
+    font-size: 22px;
+    color: white;
+    padding: 0 30px;
+    font-weight: bold;
+}
+
+/* Ignore the checkbutton stuff for now - not using it yet */
+.checkbutton {
+    color: white;
+    float: right;
+    font-size: 25px;
+    line-height: 50px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+@media (max-width: 525px) {
+    nav ul li a img {
+        /* display: none; */
+    }
+
+    nav ul li a {}
+
+    .navtop {
+        margin-left: 20%;
+        margin-right: 17%;
+    }
+
+    .logo {
+        width: 60%;
+        height: auto;
+        display: flex;
+        margin: auto;
+    }
+
+    nav ul {
+        float: right;
+    }
+
+    nav ul li {
+        content: "\A";
+    }
+
+    img.logo {
+        line-height: 30px;
+        font-size: 10px;
+        color: white;
+        padding: 0 30px;
+        font-weight: bold;
+    }
+
+    .homelink1 img {
+        display: inline-block;
+    }
+
+    nav ul li a:not(.homelink1) {
+        display: block;
+    }
+
+    /*Stuff i added: */
+    /* .checkbutton {
+        display: block;
+    } */
+    /* nav ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 50px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    } */
+    /*
+    nav ul li {
+        display: block;
+        margin: 20px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        font-size: 18px;
+    }
+
+    a:hover {
+        background: none;
+    }
+
+    #check:checked~ul {
+        left: 0;
+    } */
+}
+
+/* ---- */
 #mainMessenger {
     width: 100%;
 }
