--- a/beemessenger/registerstyle.css
+++ b/beemessenger/registerstyle.css
@@ -57,8 +57,9 @@ body {
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     width: 190px;
-    height: 50px;
+    height: 60px;
     overflow: auto;
+    padding-top: 5px;
     display: inline-block;
 }
 
@@ -71,9 +72,24 @@ span.numbers {
     margin: 10px auto;
     background-color: lightblue;
     border-radius: 10px;
+    padding-top: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     width: 190px;
-    height: 50px;
+    height: 60px;
+    overflow: auto;
+    display: inline-block;
+}
+
+.containerfull {
+    margin: 10px auto;
+    background-color: #bef18b;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    height: 60px;
     overflow: auto;
     display: inline-block;
 }
@@ -268,15 +284,8 @@ img.logo {
 }
 
 @media (max-width: 525px) {
-    nav ul li a img {
-        /* display: none; */
-    }
-
-    nav ul li a {}
-
     .navtop {
-        margin-left: 20%;
-        margin-right: 17%;
+        padding-left: 14%;
     }
 
     .logo {
@@ -309,39 +318,6 @@ img.logo {
     nav ul li a:not(.homelink1) {
         display: block;
     }
-
-    /*Stuff i added: */
-    /* .checkbutton {
-        display: block;
-    } */
-    /* nav ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 50px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    } */
-    /*
-    nav ul li {
-        display: block;
-        margin: 20px 0;
-        line-height: 30px;
-    }
-
-    nav ul li a {
-        font-size: 18px;
-    }
-
-    a:hover {
-        background: none;
-    }
-
-    #check:checked~ul {
-        left: 0;
-    } */
 }
 
 /* ---- */
