dropdown menu so epic times

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,7 @@ nav{
 
 nav ul li {
   display: inline-block;
+  text-align: center;
   font-size: 15px;
   margin: 10px;
   padding:25px;
@@ -88,11 +89,32 @@ nav ul li {
   border: 2px;
   transition: background 0.5s;
   transition: font-size 0.5s;
+  border-radius: 5px;
 }
 
 nav ul li:hover:not(.selected){
   background:#d0efff;
   font-size: 20px;
+}
+
+.dropdownmenulist{
+  all:unset;
+  transition: 0.1s !important;
+}
+
+li.dropdownmenulist{
+  display: inline-block !important;
+  margin:1px !important;
+  width: 100% !important;
+  text-align: center !important;
+  background: #ADD8E6 !important;
+  cursor:pointer !important;
+  font-size: 12px !important;
+  border-radius: 5px !important;
+}
+
+li.dropdownmenulist:hover:not(.selected){
+  background-color: #d0efff !important;
 }
 
 #beemessenger:hover:not(.selected){
